<resources>
    <string name="app_name">Ptoyecto_TFG</string>
    <string name="request_id_token">694797645424-f142hioc3bdj3ml09nbjqq0m7cqbtbmp.apps.googleusercontent.com</string>

    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="signUpLink">Sign Up</string>
    <string name="signUpTextLink">You do not have an account?</string>

    <string name="user_type">User type</string>
    <string name="str_user_type">What type of acoutn do you want?</string>
    <string name="artist_user">Artist user</string>
    <string name="basic_user">Basic User</string>

    <string name="userName">User Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cif">CIF</string>
    <string name="pwd">Password</string>
    <string name="pwdRepeat">Repeat Password</string>
    <string name="web">Web site</string>
    <string name="contact">Contact</string>
    <string name="edit_muro">Edit</string>
    <string name="selectLocation">Your Studio´s location</string>
    <string name="add_post">POST</string>
    <string name="add_style">Add Style..</string>


    <string name="saveEdit">Save edit</string>
    <string name="strMensajeSaveEdit">Do yo want to save changes?</string>

    <string name="chosePhoto">Chose photo</string>
    <string name="choseOption">Chose option</string>
    <string name="strMensajeElegirFoto">How do you want to add the photo?</string>
    <string name="strCamara">Camera</string>
    <string name="strGaleria">Gallery</string>
    <string name="addPhoto">Add Photo</string>

    <string name="emptyCamps">Complete all fields</string>
    <string name="pwdNotCoincide">Passwords not coincide</string>
    <string name="phoneNotCorrect">Phone not correct</string>
    <string name="select_studio_location">Select studio location</string>
    <string name="select_this_location">Select this location?</string>
    <string name="changePassword">Change Password</string>
    <string name="del_acount">Delete your Acount?</string>
    <string name="del_coment">Delete this coment?</string>
    <string name="del_chat">Delete this chat?</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="update_this_acount">Update this acount?</string>
    <string name="delete_this_acount">Delete this acount?</string>
    <string name="delete_this_post">Delete this post?</string>
    <string name="del_user">Delete User</string>
    <string name="add_price_size">Add price and size</string>


    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="Cancel">CANCEL</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="Suscesfull">SUSCESFULL</string>
    <string name="CORRECT">CORRECT</string>
    <string name="ERROR">ERROR</string>
    <string name="RegERROR">REG ERROR</string>
    <string name="LoginERROR">Login ERROR</string>
    <string name="aceptar">Aceptar</string>
    <string name="ocurridoErrorAutenticacion">Se ha producido un error autenticando al usuairo</string>
    <string name="accept_permissions">accept permissions</string>

    <string name="title_activity_basic_user_nav_draw">BasicUserNavDrawActivity</string>
    <string name="title_activity_artist_user_nav_draw">ArtistUserNavDrawActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_favorites">Favorites</string>

    <string name="menu_my_profile">My profile</string>
    <string name="menu_citas">Dates</string>
    <string name="menu_search">Search</string>
    <string name="menu_muro">Muro</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_delete_user">Delete my profile</string>

    <string name="change_password">Change password</string>

    <string name="date">Date </string>
    <string name="search">Search</string>
    <string name="map_mode">Map mode</string>
    <string name="list_mode">List mode</string>
    <string name="show_result_mode">Show result mode:</string>
    <string name="max_size">Max. size</string>
    <string name="max_price">Max. prcie</string>
    <string name="max_distance">Max. distance</string>
    <string name="cm">cm</string>
    <string name="km">Km</string>
    <string name="price">€</string>
    <string name="add_price">Add price</string>
    <string name="add_size">Add size</string>
    <string name="search_by_name">Search by name...</string>
    <string name="title_activity_select_studio_maps">SelectStudioMapsActivity</string>

    <string name="satellite_mode">Satellite Mode</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="hybrid_mode">Hybrid Mode</string>
    <string name="title_activity_tab_basic_user">TabBasicUserActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_search_result_maps">SearchResultMapsActivity</string>

    <string name="remove_tag">¿Quieres eliminar el tag?</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_all_artist_users">Artist</string>
    <string name="title_all_basic_users">Users</string>
    <string name="title_all_chats">Chats</string>

</resources>