<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.chema.ptoyecto_tfg.navigation.basic.ui.BasicUserSearch.BasicUserSearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_basic_user_search" />

    <fragment
        android:id="@+id/nav_artist_profile"
        android:name="com.chema.ptoyecto_tfg.navigation.basic.ui.ArtistUserProfile.ArtistUserProfileFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_artist_user_profile" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.chema.ptoyecto_tfg.navigation.basic.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_muro"
        android:name="com.chema.ptoyecto_tfg.navigation.basic.ui.muro.MuroFragment"
        android:label="@string/menu_muro"
        tools:layout="@layout/fragment_muro" />

</navigation>