<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpArtistActivity"
    style="@style/def_backgrand">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01">

        <ImageView
            android:id="@+id/img_sign_up_artist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/dark_gray"
            android:clickable="true"
            android:scaleType="centerCrop"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <Button
        style="@style/def_buttons"
        android:id="@+id/btnSignUpArtist"
        android:layout_width="82dp"
        android:layout_height="36dp"
        android:text="@string/signup"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.986" />

    <EditText
        style="@style/def_edit_text"
        android:id="@+id/ed_txt_cif_sign_up_artist"
        android:layout_width="280dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/cif"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <EditText
        style="@style/def_edit_text"
        android:id="@+id/ed_txt_email_sign_up_artist"
        android:layout_width="280dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <EditText
        style="@style/def_edit_text"
        android:id="@+id/ed_txt_user_name_sign_up_artist"
        android:layout_width="280dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <EditText
        style="@style/def_edit_text"
        android:id="@+id/ed_txt_pwd_sign_up_artist"
        android:layout_width="280dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <EditText
        style="@style/def_edit_text"
        android:id="@+id/ed_txt_repeat_pwd_sign_up_artist"
        android:layout_width="280dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/pwdRepeat"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <EditText
        style="@style/def_edit_text"
        android:id="@+id/ed_txt_phone_sign_up_artist"
        android:layout_width="280dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <fragment
        android:id="@+id/frm_MapLocation"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="385dp"
        android:layout_height="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        tools:context=".activities.SignUpArtistActivity"
        tools:layout="@layout/fragment_map_sign_up_artist" />

    <Button
        style="@style/def_buttons"
        android:id="@+id/btn_select_location"
        android:layout_width="262dp"
        android:layout_height="36dp"
        android:text="@string/selectLocation"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />
</androidx.constraintlayout.widget.ConstraintLayout>